--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "postman-bot"
-version = "0.1.0"
+version = "0.0.4"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Ivan Reshetnikov <ordinarydev@protonmail.com>"]
+description = "A simple bot for getting a telegram chat ID"
+readme = "readme.md"
+repository = "https://github.com/yenisei-labs/postman-bot"
+license = "MIT"
 
 [dependencies]
 teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum"] }
